--- a/pages/dauntless/dauntless.module.scss
+++ b/pages/dauntless/dauntless.module.scss
@@ -1,27 +1,46 @@
 .dauntless {
-    background-color: #000;
-    height: 100vh;
-    color: #fff !important;
+	background-color: #000;
+	height: 100vh;
+	color: #fff !important;
+	&_detail {
+		position: relative;
+		top: 0;
+		right: 0;
+		width: 35vw;
+	}
 
-    &_detail {
-        width: 60vw;
-        position: relative;
-        top: 0;
-        right: 0;
-    }
+	.solar_load {
+		animation: autoload 2s ease-in-out;
+	}
 
-    .solar_load {
-        animation: autoload 2s ease-in-out;
-    }
+	.box_header {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+        h1, h2, h5 {
+            color: white;
+        }
+		.title_header {
+			font-family: "Barlow Semi Condensed", sans-serif !important;
+			h1 {
+				font-size: 65px;
+				font-weight: 700;
+				letter-spacing: 15px;
+			}
+		}
+		.content_header {
+            height: 60vh;
+		}
+	}
 }
 @keyframes autoload {
-    0% {
-        opacity: 0;
-    }
-    15% {
-        opacity: 0.1;
-    }
-    100% {
-        opacity: 1;
-    }
+	0% {
+		opacity: 0;
+	}
+	15% {
+		opacity: 0.1;
+	}
+	100% {
+		opacity: 1;
+	}
 }
