--- a/pages/dauntless/dauntless.module.scss
+++ b/pages/dauntless/dauntless.module.scss
@@ -6,8 +6,13 @@
 		position: relative;
 		top: 0;
 		right: 0;
-		width: 35vw;
+		width: 50vw;
 	}
+    @media (min-width: 1440px) {
+        &_detail {
+            width: 40vw;
+        }
+    }
 
 	.solar_load {
 		animation: autoload 2s ease-in-out;
@@ -17,19 +22,37 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-        h1, h2, h5 {
-            color: white;
-        }
+		h1,
+		h2,
+		h5 {
+			color: white;
+		}
 		.title_header {
+			margin-left: 40px;
 			font-family: "Barlow Semi Condensed", sans-serif !important;
 			h1 {
 				font-size: 65px;
 				font-weight: 700;
 				letter-spacing: 15px;
 			}
+			h2 {
+				font-size: 25px;
+				font-weight: 700;
+			}
 		}
 		.content_header {
-            height: 60vh;
+			.ml_40 {
+				margin-left: 40px;
+			}
+            .pl_40{
+                padding-left: 40px !important;
+            }
+            p {
+                font-size: 20px;
+                font-weight: 400;
+                letter-spacing: 2px;
+                text-align: justify;
+            }
 		}
 	}
 }
