--- a/components/content/HomeContent.module.scss
+++ b/components/content/HomeContent.module.scss
@@ -149,7 +149,7 @@
 		}
 	}
 	.session_4 {
-		font-family: "Barlow Semi Condensed", sans-serif !important;
+		font-family: "Space Grotesk", sans-serif !important;
 		h1 {
 			color: white;
 			font-size: 55px;
@@ -180,7 +180,7 @@
 	}
 	.session_5 {
 		margin-top: 40px;
-		font-family: "Barlow Semi Condensed", sans-serif !important;
+		font-family: "Space Grotesk", sans-serif !important;
 		h1 {
 			color: white;
 			font-size: 55px;
@@ -199,7 +199,7 @@
 	}
 	.session_6 {
 		margin: 40px 0 0;
-		font-family: "Barlow Semi Condensed", sans-serif !important;
+		font-family: "Space Grotesk", sans-serif !important;
 		// background: linear-gradient(180deg, rgb(36, 36, 36) 10%, rgba(0,0,0,1) 90%);
 		h1 {
 			color: white;
