--- a/pages/zen/zen.module.scss
+++ b/pages/zen/zen.module.scss
@@ -30,7 +30,7 @@
 		}
 		.title_header {
 			margin-left: 95px;
-			font-family: "Barlow Semi Condensed", sans-serif !important;
+			font-family: "Space Grotesk", sans-serif !important;
 			h1 {
 				font-size: 65px;
 				font-weight: 700;
@@ -47,7 +47,7 @@
 			}
 			.pl_40 {
 				padding-left: 40px !important;
-				padding-right: 40px !important;	
+				padding-right: 40px !important;
 			}
 			p {
 				font-size: 20px;
