--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,7 +4,7 @@ body {
 	margin: 0;
 	// font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 	// 	Ubuntu, Cantarell, Fira Sans, Droid Sans;
-	font-family: "Barlow Semi Condensed", sans-serif !important;
+	font-family: "Space Grotesk", sans-serif !important;
 	/* width */
 	// overflow-x: hidden;
 	background-color: black;
