--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -92,15 +92,15 @@ img {
 	perspective: var(--perspective);
 	transition: perspective 2s;
 	animation: universe-animation 5s ease-in-out;
-	transform: scale(0.8);
+	transform: scale(0.85);
 }
 @keyframes universe-animation {
 	0% {
-		transform: translateX(-100%) scale(0.8);
+		transform: translateX(-100%) scale(0.85);
 		opacity: 0;
 	}
-	70% {
-		transform: translateX(0) scale(0.8);
+	50% {
+		transform: translateX(0) scale(0.85);
 		opacity: 0.4;
 	}
 	100% {
@@ -143,11 +143,6 @@ img {
 	content: "";
 	height: 600%;
 	width: 600%;
-	// background: radial-gradient(
-	// 	rgba(255, 228, 147, 0.15),
-	// 	rgba(255, 228, 147, 0.1) 40%,
-	// 	rgba(255, 255, 255, 0) 70%
-	// );
 	border-radius: 50%;
 	transform-origin: center center;
 	transform: translateY(-40%) translateX(-40%) rotateY(var(--angle-sun-glow));
@@ -207,17 +202,17 @@ img {
 		}
 	}
 }
-.mars-orbit:hover {
-	&:hover {
-		border: 0.5px solid rgb(255, 255, 255);
-		// .box_image {
-		// 	box-shadow: 0px 0px 150px 100px rgba(138, 118, 9, 0.7);
-		// }
-		.box_opacity_image {
-			opacity: 1;
-		}
-	}
-}
+// .mars-orbit:hover {
+// 	&:hover {
+// 		border: 0.5px solid rgb(255, 255, 255);
+// 		// .box_image {
+// 		// 	box-shadow: 0px 0px 150px 100px rgba(138, 118, 9, 0.7);
+// 		// }
+// 		.box_opacity_image {
+// 			opacity: 1;
+// 		}
+// 	}
+// }
 .jupiter-orbit:hover {
 	&:hover {
 		border: 0.5px solid rgb(255, 255, 255);
@@ -1117,6 +1112,10 @@ img {
 }
 .position-solar-5 {
 	top: -55px;
+}
+//solar
+.position-solar-5_1 {
+	top: -100px;
 }
 .position-solar-3 {
 	top: -55px;
