--- a/components/content/HomeContent.module.scss
+++ b/components/content/HomeContent.module.scss
@@ -209,9 +209,9 @@
 			text-align: center;
 			margin: 0 !important;
 		}
-		.vision_mission {
-		}
-		.box_image_wwd {
-		}
+		// .vision_mission {
+		// }
+		// .box_image_wwd {
+		// }
 	}
 }
