--- a/pages/legacy/legacy.module.scss
+++ b/pages/legacy/legacy.module.scss
@@ -57,6 +57,13 @@
 			}
 		}
 	}
+	.button_arrow {
+		cursor: pointer;
+		padding-right: 40px;
+		display: flex;
+		justify-content: end;
+		margin-top: 20px;
+	}
 }
 @keyframes autoload {
 	0% {
